using only class loader